ros2_ws/log/build_2022-05-20_17-20-32/ldmk_package/stderr.log
  File "/home/user/ros2_ws/install/ldmk_package/lib/python3.8/site-packages/ldmk_package/anglespublisher.py", line 9
    test = &(sys.argv[1])
           ^
SyntaxError: invalid syntax

